--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "webpack-es6-sass-boilerplate",
-  "version": "0.2.0",
-  "description": "A minimalistic webpack 4 based boilerplate for building web apps",
-  "author": "Vadim Markov",
-  "license": "MIT",
+  "name": "Rendez vous profile app",
+  "version": "0.1.0",
+  "description": "An app to profile users",
+  "author": "Gilles Deketelaere",
   "repository": {},
   "scripts": {
     "prestart": "rimraf build && rimraf ./stats.json",
