--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Rendez vous profile app",
+  "name": "rendez-vous-profile-app",
   "version": "0.1.0",
   "description": "An app to profile users",
   "author": "Gilles Deketelaere",
